// Bun Snapshot v1, https://goo.gl/fbAQLP

exports[`css.create: supports simple rules 1`] = `
{
  "base": {
    "class": "base__1f8ei0o p_2h8kl40 p4c01gd6 p10v3vx6",
    "stylesheet": [
      ".p_2h8kl40{fontz-size:16px;}",
      ".p4c01gd6{line-height:1.5;}",
      ".p10v3vx6{color:rgb(60,60,60);}",
    ],
  },
  "highlighted": {
    "class": "highlighted_g28n4j p91m869",
    "stylesheet": [
      ".p91m869{color:rebeccapurple;}",
    ],
  },
}
`;

exports[`css.create: supports custom props 1`] = `
{
  "customProps": {
    "class": "customProps_5lz1ma pxn6850 p3bm6rq9",
    "stylesheet": [
      ".pxn6850{--customColor:red;}",
      ".p3bm6rq9{--custom-color:red;}",
    ],
  },
}
`;

exports[`css.create: supports pseudo-classes 1`] = `
{
  "button": {
    "class": "button__8iz41n p2l5cglg",
    "stylesheet": [
      ".p2l5cglg{background-color:lightblue;}",
    ],
  },
}
`;

exports[`css.create: supports pseudo-classes 2`] = `
{
  "button": {
    "class": "button_1tjvtxt p2l5cglg p1sj0k0a p3ni2mzo",
    "stylesheet": [
      ".p2l5cglg{background-color:lightblue;}",
      ".p1sj0k0a{&:hover{background-color:blue;}}",
      ".p3ni2mzo{&:active{background-color:darkblue;}}",
    ],
  },
}
`;

exports[`css.create: supports pseudo-elements 1`] = `
{
  "input": {
    "class": "input_1etkoss pqpi8rk p_1uwdrog",
    "stylesheet": [
      ".pqpi8rk{color:#333;}",
      ".p_1uwdrog{&:invalid{color:red;}}",
    ],
  },
}
`;

exports[`css.create: supports media query 1`] = `
{
  "base": {
    "class": "base_3d4s76s paqr07x p_3zvevs7 p_l1op19",
    "stylesheet": [
      ".paqr07x{width:800;}",
      ".p_3zvevs7{@media (max-width: 800px){width:100%;}}",
      ".p_l1op19{@media (min-width: 1540px){width:1366;}}",
    ],
  },
}
`;

exports[`css.create: supports combining conditions 1`] = `
{
  "button": {
    "class": "button_mb2ltj p_2dr9p51 p_d33wg2 p_1bahz5i",
    "stylesheet": [
      ".p_2dr9p51{color:var(--blue-link);}",
      ".p_d33wg2{&:hover{@media (hover: hover){color:scale(1.1);}}}",
      ".p_1bahz5i{&:active{color:scale(0.9);}}",
    ],
  },
}
`;

exports[`css.create: works with JSX via spread operator 1`] = `
{
  "$": "🦄",
  "html": [
    "<button ",
    "class="button_mb2ltj p_2dr9p51 p_d33wg2 p_1bahz5i" ",
    ">",
    "</button>",
  ],
  "registry": [],
  "stylesheets": [
    ".p_2dr9p51{color:var(--blue-link);}",
    ".p_d33wg2{&amp;:hover{@media (hover: hover){color:scale(1.1);}}}",
    ".p_1bahz5i{&amp;:active{color:scale(0.9);}}",
  ],
}
`;

exports[`css.host 1`] = `
{
  "stylesheet": [
    ":host{color:var(--blue-link);}",
    ":host(.cloud){color:paleturquoise;}",
    ":host{border:1px solid black;}",
  ],
}
`;

exports[`css.keyframes 1`] = `
{
  "stylesheet": "@keyframes pulse__10z9dla{0%{transform:scale(1);}50%{transform:scale(1.1);}100%{transform:scale(1);}}",
}
`;

exports[`css.join 1`] = `
{
  "class": [
    "button_6g4l0hk p_30wbosl p_jz2gbp p_18s0619 p_lvo2c0 p_2bsqz24 p_1g64ozy p4bu535j",
    "small__3f1jkpy p_lrhn32 p_17cdq7g",
  ],
  "stylesheet": [
    ".p_30wbosl{font-family:Nunito Sans, Helvetica Neue, Helvetica, Arial, sans-serif;}",
    ".p_jz2gbp{font-weight:700;}",
    ".p_18s0619{border:0;}",
    ".p_lvo2c0{border-radius:3em;}",
    ".p_2bsqz24{cursor:pointer;}",
    ".p_1g64ozy{display:inline-block;}",
    ".p4bu535j{line-height:1;}",
    ".p_lrhn32{font-size:12px;}",
    ".p_17cdq7g{padding:10px 16px;}",
    ":host{color:red;}",
  ],
}
`;
